log
Sat May  7 00:58:01 UTC 2022: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:3: error: unknown type name ‘Heapelem’; did you mean ‘heapElem’?
   Heapelem *
   ^~~~~~~~
   heapElem
heap.c:35:7: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   heap->size = 0;
       ^~
Compilation failed
cdd6d72
Sat May  7 00:58:09 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|4
total_score: 0/70
918e616
Sat May  7 00:59:40 UTC 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:14: error: expected identifier or ‘(’ before ‘=’ token
   heapElem * = (heapElem*) malloc(3 * sizeof(heapElem))
              ^
Compilation failed
71c168d
Sat May  7 00:59:51 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:35:3: error: expected ‘,’ or ‘;’ before ‘h’
   h->size = 0;
   ^
heap.c:34:14: error: unused variable ‘harray’ [-Werror=unused-variable]
   heapElem * harray = (heapElem*) malloc(3 * sizeof(heapElem))
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e56577
Sat May  7 01:00:11 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:14: error: unused variable ‘harray’ [-Werror=unused-variable]
   heapElem * harray = (heapElem*) malloc(3 * sizeof(heapElem));
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4d81401
Sat May  7 01:01:14 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:36:20: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   harray->priority = NULL;
                    ^
cc1: all warnings being treated as errors
Compilation failed
e06c512
Sat May  7 01:01:21 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
181afdb
Sat May  7 01:02:10 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2fe8adc
Sat May  7 01:14:51 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:14: error: unused variable ‘harray’ [-Werror=unused-variable]
   heapElem * harray = (heapElem*) malloc(4 * sizeof(heapElem));
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a56d62b
Sat May  7 02:04:31 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:6: error: ‘Heap {aka struct Heap}’ has no member named ‘harray’; did you mean ‘heapArray’?
   h->harray = (heapElem*) malloc(3 * sizeof(heapElem));
      ^~~~~~
      heapArray
Compilation failed
99f5e1a
Sat May  7 02:04:44 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
072993d
Sat May  7 02:10:30 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:20:23: error: incompatible types when returning type ‘heapElem {aka struct nodo}’ but ‘void *’ was expected
   return pq->heapArray[0];
          ~~~~~~~~~~~~~^~~
heap.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
0ec9d47
Sat May  7 02:10:46 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:20:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->priority;
                          ^~
heap.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
58bc97e
